# routes/swagger.js
@@ -3,6 +3,8 @@ const swaggerUI = require("swagger-ui-express");
 const swaggerDocument = require("../swagger.json");
 
 router.use("/api-docs", swaggerUI.serve);
-router.get("/api-docs", swaggerUI.setup(swaggerDocument));
+router.get("/api-docs", 
+    //#swagger.ignore=true
+    swaggerUI.setup(swaggerDocument));
 
 module.exports = router;
